attempted fix for extra padding bug for row-block on frontpage

--- a/views/container/style.styl
+++ b/views/container/style.styl
@@ -53,7 +53,6 @@ rounded-image()
             box-shadow 0px 0px 4px black
 
 body
-
     .container
         margin-top 0em
         position relative
@@ -200,8 +199,7 @@ body
                 line-height 1.3em
 
             .content-container
-                padding container-padding
-                padding-bottom 0px
+                padding container-padding container-padding 0px container-padding
                 margin-bottom -1px
         a.hover
             border none
